--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   <header>
     <h1>Criação de Sites Premium</h1>
     <p>Sites rápidos, modernos e econômicos para portfólio, lojas, blogs e mais! Transforme sua ideia em site profissional hoje mesmo.</p>
-    <a class="btn" href="https://www.facebook.com/seuusuario" target="_blank">Saiba Mais</a>
+    <a class="btn" href="https://www.facebook.com/share/17uTkMS3mb/?mibextid=wwXIfr" target="_blank">Saiba Mais</a>
   </header>
 
   <section>
