--- a/index.html
+++ b/index.html
@@ -142,7 +142,9 @@
   <header>
     <h1>Criação de Sites Premium</h1>
     <p>Sites rápidos, modernos e econômicos para portfólio, lojas, blogs e mais! Transforme sua ideia em site profissional hoje mesmo.</p>
-    <a class="btn" href="https://www.facebook.com/profile.php?id=61586135095546" target="_blank">Saiba Mais</a>
+    <a class="btn" href="https://wa.me/5511982649748?text=Ol%C3%A1%21%20Vi%20seu%20site%20e%20gostei%20bastante.%20Gostaria%20de%20conversar%20sobre%20a%20cria%C3%A7%C3%A3o%20de%20um%20site%20para%20mim%20%F0%9F%98%8A" target="_blank">
+      Chamar no WhatsApp
+    </a>
   </header>
 
   <section>
